feat: prepare latest platform release for production
